--- a/index.html
+++ b/index.html
@@ -233,25 +233,25 @@
                     <div class="form-row">
                       <div class="col-xs-12 form-group required">
                         <label class="control-label">First Name</label>
-                        <input class="form-control" size="4" type="text">
+                        <input class="form-control" size="4" type="text" value="Edward">
                       </div>
                     </div>
                     <div class="form-row">
                       <div class="col-xs-12 form-group card required">
                         <label class="control-label">Last Name</label>
-                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text" value="Landtman">
                       </div>
                     </div>
                     <div class="form-row">
                       <div class="col-xs-12 form-group card required">
                         <label class="control-label">Email</label>
-                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text" value="edward@landtman.fi">
                       </div>
                     </div>
                     <div class="form-row">
                       <div class="col-xs-12 form-group card required">
                         <label class="control-label">Phone Number</label>
-                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text" value="66760738">
                       </div>
                     </div>
                     <div class="form-row">
@@ -276,27 +276,27 @@
                     <div class="form-row">
                       <div class="col-xs-12 form-group required">
                         <label class="control-label">Name on Card</label>
-                        <input class="form-control" size="4" type="text">
+                        <input class="form-control" size="4" type="text" value="Edward Landtman">
                       </div>
                     </div>
                     <div class="form-row">
                       <div class="col-xs-12 form-group card required">
                         <label class="control-label">Card Number</label>
-                        <input autocomplete="off" class="form-control card-number" size="20" type="text">
+                        <input autocomplete="off" class="form-control card-number" size="20" type="text" value="7699 4550 3234 0003">
                       </div>
                     </div>
                     <div class="form-row">
                       <div class="col-xs-4 form-group cvc required">
                         <label class="control-label">CVC</label>
-                        <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text">
+                        <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text" value="543">
                       </div>
                       <div class="col-xs-4 form-group expiration required">
-                        <label class="control-label">Expiration</label>
-                        <input class="form-control card-expiry-month" placeholder="MM" size="2" type="text">
+                        <label class="control-label" value="10">Expiration</label>
+                        <input class="form-control card-expiry-month" placeholder="MM" size="2" type="text" value="10">
                       </div>
                       <div class="col-xs-4 form-group expiration required">
                         <label class="control-label"> </label>
-                        <input class="form-control card-expiry-year" placeholder="YYYY" size="4" type="text">
+                        <input class="form-control card-expiry-year" placeholder="YYYY" size="4" type="text" value="2018">
                       </div>
                     </div>
                     <div class="form-row">
