--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                 <h1>Passenger details</h1>
 
-                <p>Already a member? <a href="#">Log in</a></p>
+                <p>Logged in as <a href="#">Edward Landtman</a></p>
 
               </div>
 
@@ -287,7 +287,7 @@
                     </div>
                     <div class="form-row">
                       <div class="col-xs-4 form-group cvc required">
-                        <label class="control-label">CVC</label>
+                        <label class="control-label">***</label>
                         <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text" value="543">
                       </div>
                       <div class="col-xs-4 form-group expiration required">
