--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 
           <div class="inner">
 
-            <h1 class="locations">Hong Kong <i class="fa fa-long-arrow-right" aria-hidden="true"></i> Singapore</h1>
+            <h1 class="locations">Hong Kong HKG<i class="fa fa-long-arrow-right" aria-hidden="true"></i> <span class="destination">Singapore<</span></h1>
 
             <p class="date">Outbound: 14.11.2016, Return: 21.11.2016</p>
 
-            <p class="price">Total price (Including taxes and surcharges): $512</p>
+            <p class="price">Total price (Including taxes and surcharges): $<span class="totalPrice">512</span></p>
 
           </div>
 
