--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                     </div>
                     <div class="form-row">
                       <div class="col-xs-4 form-group cvc required">
-                        <label class="control-label">***</label>
-                        <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text" value="543">
+                        <label class="control-label">CVC</label>
+                        <input autocomplete="off" class="form-control card-cvc" placeholder="ex. 311" size="4" type="text" value="***">
                       </div>
                       <div class="col-xs-4 form-group expiration required">
                         <label class="control-label" value="10">Expiration</label>
